- Merged two AI-usage documents - Added integration test